@@ -14,13 +14,14 @@
    * @copyright (c)2000-2004 Ivo Jansch
    * @license http://www.achievo.org/atk/licensing ATK Open Source License
    *
-   * @todo Make sure EVERY config variable is located here and properly documented
+   * @todo Make sure EVERY config variable is located here and properly 
+   * documented.
    *
    * @version $Revision$
    * $Id$
    */
   
-  /****************************** FILE LOCATIONS & PATHS ******************************/
+  /********************* FILE LOCATIONS & PATHS ******************************/
   
   /**
    * The application root
@@ -50,8 +51,8 @@
   $config_corporate_module_base = "";
 
   /**
-   * The location of a directory that is writable to ATK and that ATK can store it's
-   * temporary files in.
+   * The location of a directory that is writable to ATK and that ATK can 
+   * store it's temporary files in.
    * @var String
    */
   $config_atktempdir = $config_atkroot."atktmp/";
@@ -74,7 +75,7 @@
    */
   $config_meta_handler = "atk.meta.atkmetahandler";
   
-  /****************************** DATABASE SETTINGS ******************************/
+  /************************** DATABASE SETTINGS ******************************/
 
   /**
    * The IP or hostname of the database host
@@ -103,9 +104,10 @@
   /**
    * Wether or not to use a persistent connection.
    *
-   * Note that this is usefull if you don't have a lot of applications doing this
-   * as the application won't constantly have to connect to the database.
-   * However, the database server won't be able to handle a lot of persistent connections.
+   * Note that this is usefull if you don't have a lot of applications doing 
+   * this as the application won't constantly have to connect to the database.
+   * However, the database server won't be able to handle a lot of persistent
+   * connections.
    * @var bool
    */
   $config_databasepersistent = true;
@@ -117,8 +119,9 @@
    *   mysql:   MySQL (3.X ?)
    *   mysql41: MySQL > 4.1.3
    *   oci8:    Oracle 8i
-   *   oci9:    Oracle 9i
+   *   oci9:    Oracle 9i and 10g
    *   pgsql:   PostgreSQL
+   *   mssql:   Microsoft SQL Server
    * @var String
    */
   $config_database="mysql";
@@ -130,7 +133,7 @@
    */
   $config_mysqlfetchmode = MYSQL_ASSOC;  
 
-  /****************************** SECURITY ******************************/
+  /********************************** SECURITY *******************************/
   
   /**
    * The password to use for administrator login.
@@ -206,7 +209,7 @@
    */
   $config_logfile = "/tmp/atk-security.log";
 
-  /****************************** AUTHENTICATION ************************************/
+  /************************** AUTHENTICATION *********************************/
   
   /**
    * 
@@ -293,15 +296,16 @@
   $config_auth_userdescriptor = "[".$config_auth_userfield."]";
   
   /**
-   * This parameter can be used to specify a where clause which will be used to validate users login credentials
+   * This parameter can be used to specify a where clause which will be used 
+   * to validate users login credentials
    * @var String
    */
   $config_auth_accountenableexpression = "";
 
   
-  /**************** LDAP settings ******************/
+  /***************************** LDAP settings *******************************/
   /**
-   * To use LDAP you should fill this config_variabels with the right values
+   * To use LDAP you should fill this config_variables with the right values
    */
   
   /**
@@ -322,7 +326,7 @@
    */
   $config_authentication_ldap_field   = "";
   
-  /****************************** DEBUGGING AND ERROR HANDLING ******************************/
+  /***************** DEBUGGING AND ERROR HANDLING ****************************/
   
   /**
    * 
@@ -360,7 +364,7 @@
    */
   $config_mailreport = "";
 
-  /****************************** LAYOUT ******************************/
+  /************************************ LAYOUT *******************************/
   
   /**
    * 
@@ -448,12 +452,13 @@
   $config_stacktrace = true;
   
   /**
-   * The maximum length of an HTML input field generated by atkAttribute or descendants
+   * The maximum length of an HTML input field generated by atkAttribute or 
+   * descendants
    * @var int
    */
   $config_max_input_size = 70;
 
-  /****************************** LANGUAGE ******************************/
+  /********************************** LANGUAGE *******************************/
   
   /**
    * 
@@ -474,20 +479,16 @@
   $config_language_basedir = "languages/";
   
   /**
-   * 
-   * @var bool
-   */
-  $config_language_debugging = false; 
-  
-  /**
-   * True: one language switch attributes automatically switches all others on screen.
+   * True: one language switch attributes automatically switches all others on 
+   * screen.
    * False: each language switch attributes operates only on it's own node
    * @var bool
    */
   $config_multilanguage_linked = true;
 
   /**
-   * Module/node checking for strings in atkLanguage (if you don't know, don't change)
+   * Module/node checking for strings in atkLanguage (if you don't know, don't 
+   * change)
    * comment out to disable checking for module of node
    * 1 to check just for node
    * 2 to check for module and node
@@ -495,7 +496,7 @@
    */
   $config_atklangcheckmodule = 2;      
                                          
-  /****************************** TEMPLATE ENGINE CONFIGURATION ******************************/
+  /********************* TEMPLATE ENGINE CONFIGURATION ***********************/
   
   /**
    * By default all templates are described by their relative
@@ -538,7 +539,7 @@
   */
   $config_tplusesubdirs = false;
   
-  /****************************** MISCELLANEOUS CONFIGURATION OPTIONS ******************************/
+  /****************** MISCELLANEOUS CONFIGURATION OPTIONS ********************/
   
   /**
    * The application identifier (used for sessions)
@@ -612,7 +613,8 @@
    * - nocache
    * - public  (permits caching by proxies and clients
    * - private (permits caching by clients
-   * - private_no_expire (permits caching by clients but not sending expire headers >PHP4.2.0)
+   * - private_no_expire (permits caching by clients but not sending expire 
+   *   headers >PHP4.2.0)
    * @var String
    */
   $config_session_cache_limiter = "nocache";
